Added Suggested Solution to Week 2

--- a/week_2_list_generator.ipynb
+++ b/week_2_list_generator.ipynb
@@ -262,6 +262,49 @@
     "- https://wiki.python.org/moin/Generators\n",
     "- https://www.programiz.com/python-programming/iterator"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suggested Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def myrange2(first, second=None, step=1):\n",
+    "    if second is None:\n",
+    "        current = 0\n",
+    "        end = first\n",
+    "    else:\n",
+    "        current = first\n",
+    "        end = second\n",
+    "\n",
+    "    output = []\n",
+    "    while current < end:\n",
+    "        output.append(current)\n",
+    "        current += step\n",
+    "\n",
+    "    return output\n",
+    "    \n",
+    "def myrange3(first, second=None, step=1):\n",
+    "    if second is None:\n",
+    "        current = 0\n",
+    "        end = first\n",
+    "    else:\n",
+    "        current = first\n",
+    "        end = second\n",
+    "\n",
+    "    while current < end:\n",
+    "        yield current\n",
+    "        current += step"
+   ]
   }
  ],
  "metadata": {
